# reciprocity

./: .stylish-haskell.yaml  LICENSE  README.md  benchmark.sh  map-split.sh  map.sh  mapreduce.sh  reciprocity.cabal  reduce.sh  shell.nix  shmapreduce  stack.yaml  tsvtool.cabal
app/: CustomPrelude.hs  Main.hs
app/Command/: Cat.hs  Common.hs  Join.hs  Merge.hs  Partition.hs  Split.hs
src/: CustomPrelude.hs  ReciprocityPrelude.hs
src/Command/: Common.hs  Join.hs  Partition.hs
src/Lib/: Base.hs  Compile.hs  Conduit.hs  Hint.hs
src/Lib/Command/: Base.hs  Builtin.hs
src/Reciprocity/: Base.hs  Conduit.hs  Internal.c  Internal.hs  Record.hs
src/Reciprocity/Command/: Base.hs  Builtin.hs
test/: x  x1
