name:                tsvtool
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/w3rs/tsvtool#readme
license:             MIT
license-file:        LICENSE
author:              Oleksii Karakulov
maintainer:          ankarakulov@gmail.com
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Lib
--   build-depends:       base >= 4.7 && < 5
--   default-language:    Haskell2010

library
  hs-source-dirs:      src
  ghc-options:         -O2 -fno-warn-name-shadowing -Wall
  build-depends:       base, classy-prelude-conduit, optparse-applicative, hint, bytestring, text, conduit-extra, filepath, extra, conduit-merge, directory, mono-traversable, lens, unordered-containers, double-conversion, these, conduit, vector, transformers
  default-language:    Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, MultiWayIf, ScopedTypeVariables, FlexibleContexts, FlexibleInstances, RecordWildCards, ViewPatterns, TupleSections, ParallelListComp, DeriveDataTypeable, DeriveGeneric, PartialTypeSignatures, ApplicativeDo, TypeFamilies, NoMonomorphismRestriction, NoImplicitPrelude, GADTs, StandaloneDeriving, RankNTypes, ConstraintKinds
  exposed-modules:
    CustomPrelude
    Lib.Base
    Lib.Conduit
    Lib.Command.Base
    Lib.Command.Builtin

executable tsvtool
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -fno-warn-name-shadowing
  build-depends:       tsvtool, base, classy-prelude-conduit, optparse-applicative, hint, bytestring, text, conduit-extra, filepath, extra, conduit-merge, directory, mono-traversable, lens, unordered-containers, double-conversion, these, conduit, vector, transformers
  default-language:    Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, MultiWayIf, ScopedTypeVariables, FlexibleContexts, FlexibleInstances, RecordWildCards, ViewPatterns, TupleSections, ParallelListComp, DeriveDataTypeable, DeriveGeneric, PartialTypeSignatures, ApplicativeDo, TypeFamilies, NoMonomorphismRestriction, NoImplicitPrelude, GADTs, StandaloneDeriving, RankNTypes, ConstraintKinds
  -- other-modules:

-- test-suite tsvtool-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , tsvtool
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tsvtool
